Fixed issue with z-index

--- a/components/main-landing/MainLandingHero.module.scss
+++ b/components/main-landing/MainLandingHero.module.scss
@@ -15,7 +15,6 @@
     letter-spacing: 4px;
 
     position: absolute;
-    z-index: 20;
     left: 30px;
     top: 0;
 
@@ -33,8 +32,11 @@
 
     position: absolute;
 
-    &:first-of-type {
-      z-index: 10;
+    &.overlay {
+      z-index: 100;
+    }
+    &.background {
+      z-index: -1;
     }
   }
 }
